Strings fix normalizations, database inserts optimization.